syntax = "proto3";

package leadexchange.v1;

option go_package = "leadexchange/gen/go/leadexchange/v1;leadexchangev1";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "property.proto";

service LeadService {
  // Создать нового лида.
  rpc CreateLead (CreateLeadRequest) returns (LeadResponse) {
    option (google.api.http) = {
      post: "/v1/leads"
      body: "*"
    };
  }

  // Получить информацию о конкретном лиде.
  rpc GetLead (GetLeadRequest) returns (LeadResponse) {
    option (google.api.http) = {
      get: "/v1/leads/{lead_id}"
    };
  }

  // Получить список лидов по фильтру.
  rpc ListLeads (ListLeadsRequest) returns (ListLeadsResponse) {
    option (google.api.http) = {
      get: "/v1/leads"
    };
  }

  // Обновить лида.
  rpc UpdateLead (UpdateLeadRequest) returns (LeadResponse) {
    option (google.api.http) = {
      patch: "/v1/leads/{lead_id}"
      body: "*"
    };
  }

  // Переиндексировать лида вручную.
  rpc ReindexLead (ReindexLeadRequest) returns (ReindexLeadResponse) {
    option (google.api.http) = {
      post: "/v1/leads/{lead_id}/reindex"
      body: "*"
    };
  }

  // ========== AI-ФУНКЦИИ ==========

  // Получить уточняющие вопросы для "короткого" лида.
  rpc GetClarificationQuestions (GetClarificationQuestionsRequest) returns (GetClarificationQuestionsResponse) {
    option (google.api.http) = {
      get: "/v1/leads/{lead_id}/clarification"
    };
  }

  // Применить ответы на уточняющие вопросы.
  rpc ApplyClarificationAnswers (ApplyClarificationAnswersRequest) returns (ApplyClarificationAnswersResponse) {
    option (google.api.http) = {
      post: "/v1/leads/{lead_id}/clarification"
      body: "*"
    };
  }

  // Анализ намерений лида для определения оптимальных весов матчинга.
  rpc AnalyzeLeadIntent (AnalyzeLeadIntentRequest) returns (AnalyzeLeadIntentResponse) {
    option (google.api.http) = {
      get: "/v1/leads/{lead_id}/analyze"
    };
  }
}

// Lead — сущность лида.
message Lead {
  string lead_id = 1;
  string title = 2 [(validate.rules).string.min_len = 3];
  string description = 3;
  bytes requirement = 4;
  string contact_name = 5 [(validate.rules).string.min_len = 2];
  string contact_phone = 6 [(validate.rules).string.pattern = "^\\+?[0-9\\s()-]{7,}$"];
  string contact_email = 7 [(validate.rules).string.email = true, (validate.rules).string.ignore_empty = true];
  LeadStatus status = 8;
  string owner_user_id = 9 [(validate.rules).string.uuid = true];
  string created_user_id = 10 [(validate.rules).string.uuid = true];
  string created_at = 11;
  string updated_at = 12;
  optional string city = 13;
  PropertyType property_type = 14;
}

// LeadStatus — статус лида.
enum LeadStatus {
  LEAD_STATUS_UNSPECIFIED = 0;
  LEAD_STATUS_NEW = 1;
  LEAD_STATUS_PUBLISHED = 2;
  LEAD_STATUS_PURCHASED = 3;
  LEAD_STATUS_DELETED = 4;
}

// --- Requests & Responses ---

message CreateLeadRequest {
  string title = 1 [(validate.rules).string.min_len = 3];
  string description = 2;
  bytes requirement = 3;
  string contact_name = 4 [(validate.rules).string.min_len = 2];
  string contact_phone = 5 [(validate.rules).string.pattern = "^\\+?[0-9\\s()-]{7,}$"];
  string contact_email = 6 [(validate.rules).string.email = true, (validate.rules).string.ignore_empty = true];
  optional string city = 7;
  PropertyType property_type = 8;
}

message GetLeadRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
}

message ListLeadsRequest {
  message Filter {
    optional LeadStatus status = 1;
    optional string owner_user_id = 2;
    optional string created_user_id = 3;
    optional string city = 4;
    optional PropertyType property_type = 5;
  }
  Filter filter = 1;
  optional int32 page_size = 2;
  optional string page_token = 3;
  optional string order_by = 4;
  optional string order_direction = 5;
}

message ReindexLeadRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
}

message ReindexLeadResponse {
  bool success = 1;
  string message = 2;
}

message ListLeadsResponse {
  repeated Lead leads = 1;
}

message UpdateLeadRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
  optional string title = 2;
  optional string description = 3;
  optional bytes requirement = 4;
  optional LeadStatus status = 5;
  optional string owner_user_id = 6;
  optional string city = 7;
  optional PropertyType property_type = 8;
}

message LeadResponse {
  Lead lead = 1;
}

// ========== AI-ФУНКЦИИ: Уточняющие вопросы ==========

message GetClarificationQuestionsRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
}

message ClarificationQuestion {
  string field = 1;
  string question = 2;
  string question_type = 3;
  repeated string suggested_options = 4;
  string importance = 5;
}

message GetClarificationQuestionsResponse {
  bool needs_clarification = 1;
  repeated ClarificationQuestion questions = 2;
  string priority = 3;
  repeated string missing_fields = 4;
  double lead_quality_score = 5;
}

message ClarificationAnswer {
  string field = 1;
  string value = 2;
}

message ApplyClarificationAnswersRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
  repeated ClarificationAnswer answers = 2;
}

message ApplyClarificationAnswersResponse {
  bool success = 1;
  bytes new_requirement = 2;
  string message = 3;
}

// ========== AI-ФУНКЦИИ: Анализ намерений ==========

message MatchWeights {
  double price = 1;
  double district = 2;
  double rooms = 3;
  double area = 4;
  double semantic = 5;
}

message ExtractedCriteria {
  optional int64 target_price = 1;
  optional string target_district = 2;
  optional int32 target_rooms = 3;
  optional double target_area = 4;
  repeated string preferred_districts = 5;
  repeated string must_have_features = 6;
  repeated string nice_to_have_features = 7;
}

message AnalyzeLeadIntentRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
}

message AnalyzeLeadIntentResponse {
  MatchWeights recommended_weights = 1;
  ExtractedCriteria extracted_criteria = 2;
  string lead_type = 3;
  double confidence = 4;
  string explanation = 5;
  bool used_llm = 6;
}

