syntax = "proto3";

package leadexchange.v1;

option go_package = "leadexchange/gen/go/leadexchange/v1;leadexchangev1";

import "google/api/annotations.proto";
import "validate/validate.proto";

service PropertyService {
  // Создать новый объект недвижимости.
  rpc CreateProperty (CreatePropertyRequest) returns (PropertyResponse) {
    option (google.api.http) = {
      post: "/v1/properties"
      body: "*"
    };
  }

  // Получить информацию о конкретном объекте недвижимости.
  rpc GetProperty (GetPropertyRequest) returns (PropertyResponse) {
    option (google.api.http) = {
      get: "/v1/properties/{property_id}"
    };
  }

  // Получить список объектов недвижимости по фильтру.
  rpc ListProperties (ListPropertiesRequest) returns (ListPropertiesResponse) {
    option (google.api.http) = {
      get: "/v1/properties"
    };
  }

  // Обновить объект недвижимости.
  rpc UpdateProperty (UpdatePropertyRequest) returns (PropertyResponse) {
    option (google.api.http) = {
      patch: "/v1/properties/{property_id}"
      body: "*"
    };
  }

  // Найти подходящие объекты недвижимости для лида по векторному сходству.
  rpc MatchProperties (MatchPropertiesRequest) returns (MatchPropertiesResponse) {
    option (google.api.http) = {
      post: "/v1/properties/match"
      body: "*"
    };
  }

  // Переиндексировать объект недвижимости вручную.
  rpc ReindexProperty (ReindexPropertyRequest) returns (ReindexPropertyResponse) {
    option (google.api.http) = {
      post: "/v1/properties/{property_id}/reindex"
      body: "*"
    };
  }

  // ========== AI-ФУНКЦИИ ==========

  // Расширенный поиск с гибридным поиском и реранкером.
  rpc MatchPropertiesAdvanced (MatchPropertiesAdvancedRequest) returns (MatchPropertiesResponse) {
    option (google.api.http) = {
      post: "/v1/properties/match/advanced"
      body: "*"
    };
  }

  // Получить JSON-LD разметку объекта недвижимости (schema.org).
  rpc GetPropertyJSONLD (GetPropertyJSONLDRequest) returns (GetPropertyJSONLDResponse) {
    option (google.api.http) = {
      get: "/v1/properties/{property_id}/jsonld"
    };
  }

  // Сгенерировать заголовок и описание с помощью AI.
  rpc GenerateListingContent (GenerateListingContentRequest) returns (GenerateListingContentResponse) {
    option (google.api.http) = {
      post: "/v1/properties/generate-content"
      body: "*"
    };
  }

  // Анализ изображений объекта недвижимости.
  rpc AnalyzePropertyImages (AnalyzePropertyImagesRequest) returns (AnalyzePropertyImagesResponse) {
    option (google.api.http) = {
      post: "/v1/properties/{property_id}/analyze-images"
      body: "*"
    };
  }
}

// Property — сущность объекта недвижимости.
message Property {
  string property_id = 1;
  string title = 2 [(validate.rules).string.min_len = 3];
  string description = 3;
  string address = 4 [(validate.rules).string.min_len = 5];
  PropertyType property_type = 5;
  optional double area = 6;
  optional int64 price = 7;
  optional int32 rooms = 8;
  PropertyStatus status = 9;
  string owner_user_id = 10 [(validate.rules).string.uuid = true];
  string created_user_id = 11 [(validate.rules).string.uuid = true];
  string created_at = 12;
  string updated_at = 13;
  optional string city = 14;
}

// PropertyType — тип недвижимости.
enum PropertyType {
  PROPERTY_TYPE_UNSPECIFIED = 0;
  PROPERTY_TYPE_APARTMENT = 1;
  PROPERTY_TYPE_HOUSE = 2;
  PROPERTY_TYPE_COMMERCIAL = 3;
  PROPERTY_TYPE_LAND = 4;
}

// PropertyStatus — статус объекта недвижимости.
enum PropertyStatus {
  PROPERTY_STATUS_UNSPECIFIED = 0;
  PROPERTY_STATUS_NEW = 1;
  PROPERTY_STATUS_PUBLISHED = 2;
  PROPERTY_STATUS_SOLD = 3;
  PROPERTY_STATUS_DELETED = 4;
}

// --- Requests & Responses ---

message CreatePropertyRequest {
  string title = 1 [(validate.rules).string.min_len = 3];
  string description = 2;
  string address = 3 [(validate.rules).string.min_len = 5];
  PropertyType property_type = 4 [(validate.rules).enum.defined_only = true];
  optional double area = 5;
  optional int64 price = 6;
  optional int32 rooms = 7;
  optional string city = 8;
}

message GetPropertyRequest {
  string property_id = 1 [(validate.rules).string.uuid = true];
}

message ListPropertiesRequest {
  message Filter {
    optional PropertyStatus status = 1;
    optional string owner_user_id = 2;
    optional string created_user_id = 3;
    optional PropertyType property_type = 4;
    optional int32 min_rooms = 5;
    optional int32 max_rooms = 6;
    optional int64 min_price = 7;
    optional int64 max_price = 8;
    optional string city = 9;
  }
  Filter filter = 1;
  optional int32 page_size = 2;
  optional string page_token = 3;
  optional string order_by = 4;
  optional string order_direction = 5;
}

message ListPropertiesResponse {
  repeated Property properties = 1;
}

message UpdatePropertyRequest {
  string property_id = 1 [(validate.rules).string.uuid = true];
  optional string title = 2;
  optional string description = 3;
  optional string address = 4;
  optional PropertyType property_type = 5;
  optional double area = 6;
  optional int64 price = 7;
  optional int32 rooms = 8;
  optional PropertyStatus status = 9;
  optional string owner_user_id = 10;
  optional string city = 11;
}

message PropertyResponse {
  Property property = 1;
}

// MatchPropertiesRequest — запрос на поиск подходящих объектов для лида.
message MatchPropertiesRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
  message Filter {
    optional PropertyStatus status = 1;
    optional PropertyType property_type = 2;
    optional int32 min_rooms = 3;
    optional int32 max_rooms = 4;
    optional int64 min_price = 5;
    optional int64 max_price = 6;
    optional string city = 7;
  }
  Filter filter = 2;
  optional int32 limit = 3;
}

// MatchedProperty — объект недвижимости с коэффициентом схожести.
message MatchedProperty {
  Property property = 1;
  double similarity = 2;
  // Взвешенные scores
  optional double total_score = 3;
  optional double price_score = 4;
  optional double district_score = 5;
  optional double rooms_score = 6;
  optional double area_score = 7;
  optional double semantic_score = 8;
  optional string match_explanation = 9;
}

// MatchPropertiesResponse — ответ с подходящими объектами.
message MatchPropertiesResponse {
  repeated MatchedProperty matches = 1;
}

message ReindexPropertyRequest {
  string property_id = 1 [(validate.rules).string.uuid = true];
}

message ReindexPropertyResponse {
  bool success = 1;
  string message = 2;
}

// ========== AI-ФУНКЦИИ: Расширенный поиск ==========

// PropertyFilter — фильтр для поиска объектов.
message PropertyFilter {
  optional string city = 1;
  optional PropertyStatus status = 2;
  optional PropertyType property_type = 3;
  optional int64 min_price = 4;
  optional int64 max_price = 5;
  optional int32 min_rooms = 6;
  optional int32 max_rooms = 7;
}

// MatchPropertiesAdvancedRequest — запрос на расширенный поиск.
message MatchPropertiesAdvancedRequest {
  string lead_id = 1 [(validate.rules).string.uuid = true];
  PropertyFilter filter = 2;
  optional int32 limit = 3;
  optional bool use_hybrid_search = 4;
  optional bool use_reranker = 5;
  optional bool use_dynamic_weights = 6;
}

// ========== AI-ФУНКЦИИ: JSON-LD ==========

message GetPropertyJSONLDRequest {
  string property_id = 1 [(validate.rules).string.uuid = true];
  optional string base_url = 2;
}

message GetPropertyJSONLDResponse {
  bytes jsonld_data = 1;
}

// ========== AI-ФУНКЦИИ: Генерация контента ==========

message GenerateListingContentRequest {
  optional string property_id = 1;
  optional string property_type = 2;
  optional string address = 3;
  optional string city = 4;
  optional int64 price = 5;
  optional int32 rooms = 6;
  optional double area = 7;
  optional string existing_title = 8;
  optional string existing_description = 9;
  repeated string features = 10;
}

message GenerateListingContentResponse {
  string title = 1;
  string description = 2;
  repeated string keywords = 3;
  double confidence = 4;
}

// ========== AI-ФУНКЦИИ: Анализ изображений ==========

message AnalyzePropertyImagesRequest {
  string property_id = 1 [(validate.rules).string.uuid = true];
  repeated string image_urls = 2;
}

message ImageFeature {
  string name = 1;
  double confidence = 2;
  string category = 3;
}

message ImageAnalysisResult {
  repeated ImageFeature detected_features = 1;
  optional string room_type = 2;
  double quality_score = 3;
  optional string view_type = 4;
  double brightness = 5;
}

message AnalyzePropertyImagesResponse {
  int32 total_images = 1;
  double average_quality = 2;
  repeated string detected_rooms = 3;
  repeated ImageFeature all_features = 4;
  repeated string view_types = 5;
  string overall_assessment = 6;
  repeated ImageAnalysisResult image_results = 7;
}

